# magic-nix-cache

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  crane.nix  flake.nix  nix.patch  package.nix  shell.nix  unstable.nix
.cargo/: config  config.toml
.github/: dependabot.yml
.github/actions/: download-persist.yaml
.github/workflows/: build.yaml  check-and-test.yaml  check.yaml  checks.yaml  flakehub-cache.yml  flakehub.yaml  keygen.yaml  release-branches.yml  release-prs.yml  release-tags.yml  test.yaml  update-flake-lock.yaml  upload_s3.sh  zizmor.yml
gha-cache/: Cargo.toml  README.md  build.rs
gha-cache/proto/results/api/v1/: cache.proto
gha-cache/proto/results/entities/v1/: cachemetadata.proto  cachescope.proto
gha-cache/src/: api.rs  build.rs  credentials.rs  github.rs  lib.rs  util.rs
magic-actions-cache/: Cargo.toml
magic-nix-cache/: Cargo.toml
magic-nix-cache/src/: api.rs  binary_cache.rs  env.rs  error.rs  flakehub.rs  gha.rs  github.rs  main.rs  pbh.rs  telemetry.rs  util.rs
magic-nix-cache/src/narinfo/: mod.rs
magic-nix-cache/src/narinfo/nix_manifest/: mod.rs
nix-actions-cache/: Cargo.toml
nix-actions-cache/src/: api.rs  binary_cache.rs  error.rs  main.rs  util.rs
