[workspace]
members = [
	"gha-cache",
	"magic-nix-cache",
]
resolver = "2"

[profile.release]
opt-level = 'z'
strip = true
lto = true
panic = "abort"
incremental = false
codegen-units = 1

[patch.crates-io]
# See attic's Cargo.toml for why we need a clickhouse fork.
clickhouse = { git = "https://github.com/cole-h/clickhouse.rs", branch = "rustls" }
