[package]
name = "gha-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
bytes = "1.4.0"
derivative = "2.2.0"
futures = "0.3.28"
hex = "0.4.3"
rand = "0.8.5"
reqwest = { version = "0.11.17", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.6"
thiserror = "1.0.40"
tracing = "0.1.37"

[dependencies.tokio]
version = "1.28.0"
features = [
	"fs",
	"io-util",
	"macros",
	"process",
	"rt",
	"rt-multi-thread",
	"sync",
]

[dev-dependencies]
anyhow = "1.0.71"
