[package]
name = "gha-cache"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
async-trait = "0.1.68"
bytes = { version = "1.4.0", default-features = false }
derivative = { version = "2.2.0", default-features = false }
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
hex = "0.4.3"
prost = "0.13.5"
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls-native-roots", "stream", "trust-dns"] }
serde = { version = "1.0.162", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false }
sha2 = { version = "0.10.6", default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.44.2", default-features = false, features = ["io-util"] }
tokio-util = "0.7.15"
tracing = { version = "0.1.37", default-features = false }
twirp = "0.8.0"
unicode-bom = "2.0.2"
url = "2.5.4"

[dev-dependencies]
anyhow = "1.0.71"

[build-dependencies]
twirp-build = "0.8"
prost-build = "0.13"
