[package]
name = "magic-nix-cache"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
gha-cache = { path = "../gha-cache" }

axum = { version = "0.7.5", default-features = false, features = [
	"json",
	"tokio",
	"http2",
	"macros"
] }
clap = { version = "4.2.7", default-features = false, features = [
	"std",
	"derive",
	"error-context",
	"wrap_help",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"ansi",
	"env-filter",
	"fmt",
	"tracing-log",
	"smallvec",
] }
tower-http = { version = "0.5.2", features = ["trace"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = { version = "1.0.96", default-features = false }
thiserror = "1.0.40"
tokio-stream = { version = "0.1.15", default-features = false }
tokio-util = { version = "0.7.11", features = ["io", "compat"] }
daemonize = "0.5.0"
is_ci = "1.1.1"
sha2 = { version = "0.10.6", default-features = false }
reqwest = { version = "0.12.5", default-features = false, features = [
	"blocking",
	"rustls-tls-native-roots",
	"trust-dns",
	"json"
] }
netrc-rs = "0.1.2"
attic = { git = "https://github.com/DeterminateSystems/attic", branch = "fixups-for-magic-nix-cache" }
attic-client = { git = "https://github.com/DeterminateSystems/attic", branch = "fixups-for-magic-nix-cache" }
attic-server = { git = "https://github.com/DeterminateSystems/attic", branch = "fixups-for-magic-nix-cache" }
indicatif = "0.17"
anyhow = "1.0.71"
tempfile = "3.9"
uuid = { version = "1.4.0", features = ["serde", "v7", "rand", "std"] }
futures = "0.3"
async-compression = "0.4"
tracing-appender = "0.2.3"
http = "1.0"
http-body-util = "0.1"
hyper = { version = "1.0.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
xdg = { version = "2.5.2" }
color-eyre = { version = "0.6.3" }

[dependencies.tokio]
version = "1.44.2"
default-features = false
features = ["fs", "macros", "process", "rt", "rt-multi-thread", "sync"]
